Checker logic -> generateBoard, getUpMoves, getDownMoves, movePiece(basic move); initial board styling

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client-dev": "webpack --mode=production --watch",
+    "client-dev": "webpack --watch --mode=development",
     "server-dev": "nodemon server/index.js",
     "sass-dev": "sass client/dist/styles/style.scss client/dist/styles/style.css --watch"
   },
@@ -25,12 +25,12 @@
     "@typescript-eslint/parser": "^5.28.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "eslint": "^8.18.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "sass": "^1.52.3",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
