--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "js-cookie": "^3.0.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
