--- a/package.json
+++ b/package.json
@@ -39,16 +39,18 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-live-clock": "^6.0.1",
     "uuid": "^8.3.2"
   }
 }
