--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-live-clock": "^6.0.1",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "uuid": "^8.3.2"
   }
 }
