--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode=development",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-dev": "webpack --watch --mode=development",
     "server-dev": "nodemon server/index.js",
